--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>Hola desde ubuntu</title>
 </head>
 <body>
+    <div id="cabecera">
+        cabecera
+    </div>
     <h1>Aqui vamos a hacer un blog post</h1>
 <p>y este es el parrafo de inicio</p>    
 </body>
