--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         cabecera
     </div>
     <h1>Aqui vamos a hacer un blog post</h1>
+    <h2>Verificando como trabaja el merge</h2>
 <p>y este es el parrafo de inicio</p>    
 </body>
 </html>
