Agregando texto al h2 de mi html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         cabecera
     </div>
     <h1>Aqui vamos a hacer un blog post</h1>
-    <h2>Verificando como trabaja el merge</h2>
+    <h2>Verificando como trabaja el merge desde windows</h2>
 <p>y este es el parrafo de inicio</p>    
 </body>
 </html>
