--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     </div>
     <h1>Aqui vamos a hacer un blog post</h1>
     <h2>Verificando como trabaja el merge desde ubutntu</h2>
+    <h3>Agregando desde github</h3>
 <p>y este es el parrafo de inicio</p>    
 </body>
 </html>
