--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <h1>Aqui vamos a hacer un blog post</h1>
     <h2>Verificando como trabaja el merge desde ubutntu</h2>
     <h3>Agregando desde github</h3>
+    <h4>Agregando texto para verificar conexion ssh</h4>
 <p>y este es el parrafo de inicio</p>    
 </body>
 </html>
