--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         cabecera
     </div>
     <h1>Aqui vamos a hacer un blog post</h1>
+    <h1>Agregando otro h1</h1>
     <h2>Verificando como trabaja el merge desde ubutntu</h2>
     <h3>Agregando desde github</h3>
     <h4>Agregando texto para verificar conexion ssh</h4>
